update form style issues

--- a/index.html
+++ b/index.html
@@ -363,13 +363,13 @@
                               practical experience needed to launch your career
                               in web development!
                             </p>
-                            <span>6 weeks</span>
+                            <span>6 months</span>
                             <span>weekly Review</span>
                             <span class="last-span">Placement Assistance</span>
                           </div>
                           <div class="hover-overlay">
                             <button
-                              onclick="window.location='#contact'"
+                              onclick="window.location='#contact-section'"
                               class="subscribe-button"
                             >
                               Join Course
@@ -412,13 +412,13 @@
                                 become a professional Flutter developer.
                               </strong>
                             </p>
-                            <span>6 weeks</span>
+                            <span>6 months</span>
                             <span>weekly Review</span>
                             <span class="last-span">Placement Assistance</span>
                           </div>
                           <div class="hover-overlay">
                             <button
-                              onclick="window.location='#contact'"
+                              onclick="window.location='#contact-section'"
                               class="subscribe-button"
                             >
                               Join Course
@@ -461,13 +461,13 @@
                               become a confident
                               <strong>Business Development Executive.</strong>
                             </p>
-                            <span>6 weeks</span>
+                            <span>6 months</span>
                             <span>weekly Review</span>
                             <span class="last-span">Placement Assistance</span>
                           </div>
                           <div class="hover-overlay">
                             <button
-                              onclick="window.location='#contact'"
+                              onclick="window.location='#contact-section'"
                               class="subscribe-button"
                             >
                               Join Course
@@ -512,13 +512,13 @@
                               <strong>UI/UX designer</strong>
                               .
                             </p>
-                            <span>6 weeks</span>
+                            <span>6 months</span>
                             <span>weekly Review</span>
                             <span class="last-span">Placement Assistance</span>
                           </div>
                           <div class="hover-overlay">
                             <button
-                              onclick="window.location='#contact'"
+                              onclick="window.location='#contact-section'"
                               class="subscribe-button"
                             >
                               Join Course
