--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       rel="stylesheet"
     />
 
-    <title>Hustlify</title>
+    <title>Hustlify | Master Sales Skills & Boost Your Income</title>
+    <meta name="description" content="Learn proven sales strategies with Hustlify’s expert-led courses. Master the art of persuasion, close more deals, and accelerate your career with high-income sales skills. Start learning today!">
+    <meta name="google-site-verification" content="cFEApjcseRFaiqP-Q6CjEB9tqY9KsZlXO39q3YhUE3I" />
+    <link rel="icon" href='./assets/images/newImages/husLogo.png' type="image/png">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
